# agent-economics-lab

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  false_green.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: assurance-check.yml  case-study.yml  claim-challenge.yml  frontier-case.yml  source-adapter.yml
.github/workflows/: test.yml
agent_economics/: __init__.py  adapters.py  assurance.py  checks.py  cli.py  controls.py  evidence.py  frontier.py  frontier_report.py  io.py  models.py  report.py
docs/: frontier.md  landscape.md  launch.md  limitations.md  methodology.md  modularity.md  public-profile.md  research-agenda.md
examples/: assurance-case.md  baseline.json  modularity_demo.py  outcomes.csv  policy.json  rates.json  support_trace.csv
examples/compute-frontier/: README.md  generate.py  manifest.json  task-manifest.json
examples/compute-frontier/arms/: balanced-4-step.json  cheap-2-step.json  premium-12-step.json  premium-8-step.json
lessons/: 00_reconstruct_task_cost.py  01_gate_on_outcomes.py  02_compare_counterfactual.py  03_bound_runaway_tasks.py  04_issue_assurance_case.py
profile/: README.md
research/: DATA_CARD.md  FRONTIER_DATA_CARD.md  FRONTIER_PROTOCOL.md  NOTE.md  PROTOCOL.md  README.md  false_green_benchmark.py
research/results/: SUMMARY.md  false_green_results.csv
research/results/frontier/: frontier.json  frontier.md
skills/build-artifact-first-oss-launch/: SKILL.md
skills/build-artifact-first-oss-launch/agents/: openai.yaml
skills/build-artifact-first-oss-launch/assets/: claim-ledger.md  gap-map.md  launch-plan.md  profile-readme.md  reviewer-briefs.md
skills/build-artifact-first-oss-launch/references/: audit-rubric.md  operating-model.md  (+2 more)
templates/: agent-economic-assurance-case.md
tests/: test_assurance.py  test_cli.py  test_controls.py  test_frontier.py  test_io.py  test_modularity.py  test_research_benchmark.py
(+1 files in other folders)
