[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-economics-lab"
version = "0.1.0"
description = "Composable economic assurance for AI-agent deployment decisions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Vyoma Gajjar"}]
keywords = ["ai-agents", "finops", "evaluation", "llm", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.scripts]
agent-economics = "agent_economics.cli:main"

[tool.setuptools.packages.find]
include = ["agent_economics*"]
